# Rebecca-prototype

./: ReadMe.txt
SCARA/: ReadMe.txt  SCARA.ino
c++_arm_move_image_class/: CMakeLists.txt  ReadMe.txt
images_capture_code/: ReadMe.txt  save_image.py
plant_run/: ReadMe.txt  colors.txt  plant_run.py
plants_training/: PCA.py  ReadMe.txt  gen_plant_data.py  plant.py  plant_run.py
